# McStatus-API

./: .gitignore  .gitmodules  BedrockServerStatus.py  Dockerfile  FormatData.py  JavaServerStatus.py  README.md  app.py  config.py  dnslookup.py  generate_img.py  pyproject.toml  requirements.txt
