[project]
name = "mcstatus-api"
version = "0.1.0"
description = "A Minecraft Server status API based on FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "dnspython>=2.6.1"
    "mcstatus>= 12.0.5"
]
